feat: initial graphql setup
* docs: switch to npm for this example
* refactor: use postgresql in this example
* add graphql dependencies
* insert first graphql query (root -> returns hello world)
* add typescript types for express and jsonwebtoken
* add AppRequest type with user property (for auth middleware)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nestjs-realworld-example-app",
+  "name": "nestjs-gql-realworld-example-app",
   "version": "1.0.0",
-  "description": "NestJS + MikroORM realworld API example (MySQL)",
+  "description": "NestJS + MikroORM realworld GraphQL API example (PostgreSQL)",
   "main": "index.js",
   "scripts": {
     "start": "nest start",
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/mikro-orm/nestjs-realworld-example-app.git"
   },
-  "author": "banan23@gmail.com",
+  "author": "Brian Diephuis",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mikro-orm/nestjs-realworld-example-app/issues"
@@ -28,47 +28,54 @@
   "homepage": "https://github.com/mikro-orm/nestjs-realworld-example-app#readme",
   "dependencies": {
     "@mikro-orm/core": "^4.0.7",
-    "@mikro-orm/mysql": "^4.0.7",
     "@mikro-orm/nestjs": "^4.2.0",
+    "@mikro-orm/postgresql": "^4.0.7",
     "@mikro-orm/reflection": "^4.0.7",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^7.4.4",
     "@nestjs/core": "^7.4.4",
+    "@nestjs/graphql": "^7.10.6",
     "@nestjs/platform-express": "^7.4.4",
     "@nestjs/swagger": "^4.6.1",
+    "apollo-server-express": "^2.24.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.5",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
     "slug": "^3.3.5",
+    "subscriptions-transport-ws": "^0.9.18",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@mikro-orm/cli": "^4.0.7",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "atob": ">=2.1.2",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.2",
     "@nestjs/testing": "^7.4.4",
-    "deep-extend": ">=0.6.0",
-    "extend": ">=3.0.2",
-    "jest": "^26.4.2",
-    "supertest": "^5.0.0",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "typescript": "4.0.3",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.14",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "atob": ">=2.1.2",
+    "deep-extend": ">=0.6.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
-    "prettier": "^2.1.2"
+    "extend": ">=3.0.2",
+    "jest": "^26.4.2",
+    "prettier": "^2.1.2",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
+    "typescript": "4.0.3"
   },
   "mikro-orm": {
     "useTsNode": true,
