feat: refactor to gql + documentation
* update readme
* update linting (both prettier formatting and linting through eslint)
* update dependencies
* add token auth (outside of gql)
* switch to port 8000
* add AuthMiddleware
* remove swagger
* add compression and helmet middleware
* add my-user middleware
* refactor directory structure a bit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "favorited",
+        "inversed",
+        "jsonwebtoken",
         "mikro",
         "nestjsrealworld",
         "postgresql"
