--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "NestJS + MikroORM realworld GraphQL API example (PostgreSQL)",
   "main": "index.js",
   "scripts": {
+    "clean": "npx rimraf dist",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run clean && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "npx eslint src --ext .ts --cache --fix",
+    "lint": "npx eslint src --ext .ts --cache",
     "test": "jest --config=jest.json",
     "test:watch": "jest --watch --config=jest.json",
     "test:coverage": "jest --config=jest.json --coverage --coverageDirectory=coverage",
-    "test:e2e": "APIURL=http://localhost:3000/api ./e2e/run-api-tests.sh"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "repository": {
     "type": "git",
@@ -27,55 +27,62 @@
   },
   "homepage": "https://github.com/mikro-orm/nestjs-realworld-example-app#readme",
   "dependencies": {
-    "@mikro-orm/core": "^4.0.7",
+    "@mikro-orm/core": "^4.5.5",
     "@mikro-orm/nestjs": "^4.2.0",
-    "@mikro-orm/postgresql": "^4.0.7",
-    "@mikro-orm/reflection": "^4.0.7",
+    "@mikro-orm/postgresql": "^4.5.5",
+    "@mikro-orm/reflection": "^4.5.5",
     "@mikro-orm/sql-highlighter": "^1.0.1",
-    "@nestjs/common": "^7.4.4",
-    "@nestjs/core": "^7.4.4",
+    "@nestjs/common": "^7.6.17",
+    "@nestjs/core": "^7.6.17",
     "@nestjs/graphql": "^7.10.6",
-    "@nestjs/platform-express": "^7.4.4",
-    "@nestjs/swagger": "^4.6.1",
+    "@nestjs/platform-express": "^7.6.17",
     "apollo-server-express": "^2.24.1",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
-    "slug": "^3.3.5",
-    "subscriptions-transport-ws": "^0.9.18",
-    "swagger-ui-express": "^4.1.4"
+    "slug": "^5.0.1",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^4.0.7",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.2",
-    "@nestjs/testing": "^7.4.4",
+    "@mikro-orm/cli": "^4.5.5",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.1",
+    "@nestjs/testing": "^7.6.17",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.14",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "atob": ">=2.1.2",
-    "deep-extend": ">=0.6.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-import": "^2.22.1",
-    "extend": ">=3.0.2",
-    "jest": "^26.4.2",
-    "prettier": "^2.1.2",
-    "supertest": "^5.0.0",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "typescript": "4.0.3"
+    "@types/slug": "^0.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^1.1.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.3.0",
+    "rimraf": "^3.0.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^10.0.0",
+    "typescript": "4.2.4"
   },
   "mikro-orm": {
     "useTsNode": true,
