--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,12 @@
     "removeComments": true,
     "esModuleInterop": true,
     "noLib": false,
-    "lib": ["es2017"],
+    "lib": [
+      "es2017"
+    ],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "target": "es2020", // https://node.green/#ES2020 shows 100% es2020 support in NodeJS >=14.17
     "sourceMap": true,
     "allowJs": true,
     "outDir": "./dist"
