docs: minor docs added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "favorited",
         "inversed",
         "jsonwebtoken",
+        "kubernetes",
         "mikro",
         "nestjsrealworld",
         "postgresql"
