--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
   },
   "homepage": "https://github.com/mikro-orm/nestjs-realworld-example-app#readme",
   "dependencies": {
-    "@mikro-orm/core": "^4.5.5",
+    "@mikro-orm/core": "^4.5.6",
     "@mikro-orm/nestjs": "^4.2.0",
-    "@mikro-orm/postgresql": "^4.5.5",
-    "@mikro-orm/reflection": "^4.5.5",
+    "@mikro-orm/postgresql": "^4.5.6",
+    "@mikro-orm/reflection": "^4.5.6",
     "@mikro-orm/sql-highlighter": "^1.0.1",
-    "@nestjs/common": "^7.6.17",
-    "@nestjs/core": "^7.6.17",
-    "@nestjs/graphql": "^7.10.6",
-    "@nestjs/platform-express": "^7.6.17",
-    "apollo-server-express": "^2.24.1",
+    "@nestjs/common": "^7.6.18",
+    "@nestjs/core": "^7.6.18",
+    "@nestjs/graphql": "^7.11.0",
+    "@nestjs/platform-express": "^7.6.18",
+    "apollo-server-express": "^2.25.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -44,7 +44,8 @@
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
-    "graphql": "^15.5.0",
+    "dataloader": "^2.0.0",
+    "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -52,32 +53,32 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
-    "slug": "^5.0.1",
-    "subscriptions-transport-ws": "^0.9.18"
+    "slug": "^5.1.0",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^4.5.5",
+    "@mikro-orm/cli": "^4.5.6",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.1",
-    "@nestjs/testing": "^7.6.17",
+    "@nestjs/testing": "^7.6.18",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/node": "^14.11.2",
+    "@types/jsonwebtoken": "^8.5.2",
+    "@types/node": "^14.17.4",
     "@types/slug": "^0.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "eslint": "^7.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.1",
     "jest": "^26.6.3",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
